# ecstasy

./: Cargo.toml  config.toml.example
.github/: README.md
src/: config.rs  main.rs
src/collector/: mod.rs
src/mirrors/: beatconnect.rs  catboy.rs  mod.rs  nerinyan.rs  osudirect.rs  sayobot.rs
src/utilities/: collection.rs  mod.rs  osu.rs  speedtest.rs
