[package]
name = "ecstasy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
sanitise-file-name = "1.0.0"
serde_json = "1.0.140"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies.osu-db]
git = "https://github.com/rushiiMachine/osu-db"
branch = "fix/breaking-change-20250107"

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.1"
features = ["full"]

[dependencies.clap]
version = "4.5.32"
features = ["derive"]
