[package]
name = "ecstasy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
osu-db = "0.2.1"
sanitise-file-name = "1.0.0"
serde_json = "1.0.149"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
winreg = "0.55.0"

[dependencies.reqwest]
version = "0.13.1"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.49.0"
features = ["full"]

[dependencies.clap]
version = "4.5.54"
features = ["derive"]
